--- a/index.html
+++ b/index.html
@@ -662,6 +662,28 @@
             font-size: 30px;
         }
     }
+
+    /* section9 */
+    .sec9-grid {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        gap: 10px;
+    }
+
+    .section9 h3 {
+        font-family: "Michroma", sans-serif;
+        font-weight: 500;
+
+
+        font-size: 14px;
+        padding: 5px 0px;
+    }
+
+    @media(max-width:700px) {
+        .sec9-grid {
+            grid-template-columns: 1fr;
+        }
+    }
 </style>
 
 
@@ -1209,10 +1231,10 @@
         <!-- 8th section  -->
         <section class="py-5 section8 " style="background-color: #0B1117;">
             <div class="container">
-                <div class="row  align-items-center">
+                <div class="row gx-5  align-items-center">
                     <div class="col-12 col-md-6">
-                        <div class="row bottom-border">
-                            <div class="col contact">
+                        <div class="row ">
+                            <div class="col contact bottom-border">
                                 <p>CONTACT US</p>
                                 <h2>Get in Touch Anytime, Anywhere </h2>
                                 <p>Contact us for personalized service and expert transportation solutions. We’re here
@@ -1248,6 +1270,7 @@
                     <div class="col-12 col-md-6 bg-img ">
 
                     </div>
+                    <hr class="d-none d-sm-block">
                 </div>
 
 
@@ -1260,30 +1283,23 @@
 
         </section>
         <!-- 9th section -->
-        <section class="bg-dark py-5 overflow-x-hidden">
-            <div class="container-fluid">
-                <div class="row gx-5 ">
-                    <div class="col-12 col-md-4 bg-black mx-2 py-5 my-2">
-                        <div class="d-flex align-items-center">
-                            <img src="./assets/location.png" alt="" width="30px">
-                            <p class="font-monospace mb-0 ms-2">222 Strickland AVE Blackshear, GA, 31516</p>
-                        </div>
+        <section class="section9 " style="background-color: #0B1117;">
+            <div class="container py-5">
+                <div class="sec9-grid ">
+                    <div class="col-12 col-md-auto d-flex justify-content-center align-items-center  mb-3 mb-md-0"
+                        style="background-color: #141F2A; padding: 30px 30px;">
+                        <img src="./assets/location.png" alt="" width="30px">
+                        <h3 class="m-0 ps-2">222 Strickland AVE Blackshear, GA, 31516 </h3>
                     </div>
-                    <div class="col-12 col-md-4 bg-black mx-2 py-5 my-2">
-                        <div class="d-flex align-items-center">
-                            <img src="./assets/phone.png" alt="" width="30px">
-                            <p class="font-monospace">
-                                (855) 518-2854
-                            </p>
-                        </div>
+                    <div class="col-12 col-md-auto d-flex justify-content-center align-items-center  mb-3 mb-md-0"
+                        style="background-color: #141F2A; padding: 30px 30px;">
+                        <img src="./assets/phone.png" alt="" width="30px">
+                        <h3 class="m-0 ps-2">(855) 518-2854 </h3>
                     </div>
-                    <div class="col-12 col-md-3 bg-black mx-2 py-5 my-2">
-                        <div class="d-flex align-items-center">
-                            <img src="./assets/mail.png" alt="" width="30px">
-                            <p class="font-monospace">
-                                Dispatch@mondsontrucking.com
-                            </p>
-                        </div>
+                    <div class="col-12 col-md-auto d-flex justify-content-center align-items-center "
+                        style="background-color: #141F2A; padding: 30px 30px;">
+                        <img src="./assets/mail.png" alt="" width="30px">
+                        <h3 class="m-0 ps-2">Dispatch@mondsontrucking.com </h3>
                     </div>
                 </div>
 
@@ -1291,13 +1307,18 @@
 
 
             </div>
-            <hr>
+
+
+
+
+            </div>
+            <hr class="m-0">
         </section>
 
 
     </main>
 
-    <!-- <footer class="bg-dark py-5">
+    <footer class="py-5" style="background-color: #0B1117;">
         <section>
             <div class="container">
                 <div class="row">
@@ -1355,7 +1376,7 @@
             </div>
         </section>
 
-    </footer> -->
+    </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.12.5/dist/gsap.min.js"></script>
 
