--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
         opacity: 0.5;
     }
 
+
     .bg-img-1 {
         background: url("./assets/main-truck-mask.png") no-repeat center center;
 
@@ -1229,7 +1230,7 @@
 
 
         <!-- 8th section  -->
-        <section class="py-5 section8 " style="background-color: #0B1117;">
+        <section class="py-5 section8 " style="background-color: #0B1117;overflow: hidden;">
             <div class="container">
                 <div class="row gx-5  align-items-center">
                     <div class="col-12 col-md-6">
