--- a/index.html
+++ b/index.html
@@ -680,9 +680,10 @@
         padding: 5px 0px;
     }
 
-    @media(max-width:700px) {
-        .sec9-grid {
-            grid-template-columns: 1fr;
+    @media(max-width:300px) {
+
+        .section9 h3:last-of-type {
+            font-size: 10px;
         }
     }
 </style>
@@ -761,17 +762,17 @@
                                     <a class="nav-link text-white" href="#section4">Services</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-white" href="#">Why Choose Us</a>
+                                    <a class="nav-link text-white" href="#section6">Why Choose Us</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-white" href="#">Testimonials</a>
+                                    <a class="nav-link text-white" href="#section7">Testimonials</a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link text-white policy-page" href="./privacypolicy.html">Privacy
                                         Policy</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a class="nav-link text-white" href="#">Contact Us</a>
+                                    <a class="nav-link text-white" href="#section8">Contact Us</a>
                                 </li>
                             </ul>
 
@@ -1112,7 +1113,7 @@
         </section>
 
         <!-- 6th section -->
-        <section class="section6 py-5" style="background-color: #0B1117; overflow: hidden;">
+        <section id="section6" class="section6 py-5" style="background-color: #0B1117; overflow: hidden;">
             <div class="row text-center text-white">
                 <div class="col p-0">
 
@@ -1180,7 +1181,7 @@
         </section>
 
         <!-- 7th section -->
-        <section class="section7  " style="background-color: #0B1117; overflow: hidden; ">
+        <section id="section7" class="section7  " style="background-color: #0B1117; overflow: hidden; ">
             <div class="row gx-5 h-100 d-flex">
 
                 <div class=" col-12 col-md-6  h-100 order-md-1 order-2">
@@ -1230,7 +1231,7 @@
 
 
         <!-- 8th section  -->
-        <section class="py-5 section8 " style="background-color: #0B1117;overflow: hidden;">
+        <section id="section8" class="py-5  " style="background-color: #0B1117;overflow: hidden;">
             <div class="container">
                 <div class="row gx-5  align-items-center">
                     <div class="col-12 col-md-6">
@@ -1286,19 +1287,19 @@
         <!-- 9th section -->
         <section class="section9 " style="background-color: #0B1117;">
             <div class="container py-5">
-                <div class="sec9-grid ">
-                    <div class="col-12 col-md-auto d-flex justify-content-center align-items-center  mb-3 mb-md-0"
+                <div class="row ">
+                    <div class=" col-12 col-md-4 d-flex  align-items-center  mb-3 mb-md-0"
                         style="background-color: #141F2A; padding: 30px 30px;">
                         <img src="./assets/location.png" alt="" width="30px">
                         <h3 class="m-0 ps-2">222 Strickland AVE Blackshear, GA, 31516 </h3>
                     </div>
-                    <div class="col-12 col-md-auto d-flex justify-content-center align-items-center  mb-3 mb-md-0"
+                    <div class="col-12 col-md-4 d-flex  align-items-center  mb-3 mb-md-0"
                         style="background-color: #141F2A; padding: 30px 30px;">
                         <img src="./assets/phone.png" alt="" width="30px">
                         <h3 class="m-0 ps-2">(855) 518-2854 </h3>
                     </div>
-                    <div class="col-12 col-md-auto d-flex justify-content-center align-items-center "
-                        style="background-color: #141F2A; padding: 30px 30px;">
+                    <div class="col-12 col-md-4 d-flex  align-items-center "
+                        style="background-color: #141F2A; padding: 30px 30px; overflow: hidden;">
                         <img src="./assets/mail.png" alt="" width="30px">
                         <h3 class="m-0 ps-2">Dispatch@mondsontrucking.com </h3>
                     </div>
